# tuochat

./: .gitignore  .pydoctest.json  .pylintrc  .pylintrc_spell  .pylintrc_tests  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile.test  Justfile  Makefile  README.md  bag-info.txt  missing.py  mkdocs.yml  private_dictionary.txt  pyproject.toml  tox.ini
.github/workflows/: build.yml  release.yml  tox.yml
docs/: COPILOT.md  SERVER_VS_CLIENT.md  accessibility.md  advanced-cli.md  api-reference.md  attaching-files.md  classification.md  code-interpreter.md  configuration.md  files-and-data.md  gui.md  index.md  installation.md  quickstart.md  requirements.txt  search.md  security.md  slash-commands.md  terminal-chat.md
docs/contributing/: API_STREAMING_LEARNINGS.md  CONTRIBUTING.md  TKINTER_LEARNINGS.md
docs/driver_files/: GEMINI.md  dependency-provenance.md
examples/: appointment_booking.py  appointment_search.py  author_search.py  book_search.py
scripts/: basic_checks.sh  build_docker.bat  build_docker.ps1  build_docker.sh  gen_tamper_manifest.py  run_benchmarks.py  run_docker.bat  run_docker.ps1  run_docker.sh
spec/: big_spec.md
spec/duo_api_docs/: DUOS_SECRETS_REVEALED.md  DUO_CODE.md
test/: test_bootstrap_unit.py  test_bugfixes.py  test_chat_cmd_unit.py  test_cli.py  test_cli_dispatch_unit.py  test_config.py  test_config_openrouter.py  test_context_attachments.py  test_context_composer.py  test_context_mgmt.py  test_context_validation.py  test_conversation_cmd_unit.py  test_discovery_custom_instructions.py  test_discovery_helpers.py  test_estimation.py  test_files_cmd_unit.py  test_gitlab_client_unit.py  test_gitlab_features.py  test_gl_commands.py  test_headless_cmd_unit.py  test_jira_client_unit.py  test_jira_cmd_unit.py  test_main.py  test_models.py  test_observability.py  test_openrouter_auth_cmd.py  test_openrouter_model_cmd.py  test_patterns.py  test_persistence.py  test_pickers.py  test_prompts.py  test_rendering.py  test_repl_helpers_unit.py  test_session_openrouter.py  test_session_unit.py  test_setup_unit.py  test_smart_parser.py  test_startup_audit.py  test_tamper_manifest_unit.py  test_web_attach_unit.py  (+2 more)
test/test_blind_prompt_kit/: __init__.py  test_adapter_and_text.py  test_choices.py  test_choices_text_tree_temporal_more.py  test_commands_core_and_models.py  test_display_numbers_tree_and_paging.py  test_support.py  test_temporal_and_forms.py  test_temporal_and_forms_more.py
test/test_gui/: test_error_log.py  test_gui_minimal.py  test_gui_tabs_unit.py  test_jira_tab_unit.py
test/test_provider/: test_provider_auth_unit.py  test_provider_duo.py  test_provider_eliza_unit.py  test_provider_extra.py  test_provider_openrouter_unit.py  test_provider_websocket.py
test/test_security/: test_credentials_unit.py  test_sandbox_additional.py  test_sandbox_unit.py  test_security_masking.py  test_security_tamper.py
test/test_self_pkg_mgmt/: test_api.py  test_audit.py  test_background_host_upgrade_report.py  test_install_method.py  test_installed.py  test_self_check.py  test_self_pkg_mgmt_cache.py  test_self_pkg_mgmt_cli.py  test_self_pkg_mgmt_pypi.py
test_perf/: __init__.py  conftest.py  test_perf.py  test_perf_fast.py
tests_integration/: test_duo_model_live.py  test_headless_ongoing_live.py  test_oauth_live.py  test_response_garbling_live.py  test_streaming_live.py
tuochat/: __about__.py  __init__.py  __main__.py  config.py  constants.py  estimation.py  git_info.py  gitlab_client.py  help_data.py  jira_client.py  jira_formatting.py  jira_models.py  logging_config.py  models.py  observability.py  patterns.py  resources.py  serialization.py  winlog.py  workspace_memory.py
tuochat/cli/: __init__.py  bootstrap.py  command_models.py  dispatch.py  entrypoint.py  io.py  models.py  pickers.py  prompts.py  rendering.py  repl.py  session.py  setup.py  tutorial.py
tuochat/cli/blind_prompt_kit/: __init__.py  adapters.py  choices.py  commands.py  core.py  display.py  exceptions.py  forms.py  matching.py  models.py  numbers.py  pagination.py  temporal.py  text.py  tree.py  verbosity.py
tuochat/cli/commands/: archive_cmd.py  auth_cmd.py  chat_cmd.py  code.py  config_cmd.py  context_cmd.py  conversation_cmd.py  duo_model_cmd.py  export_cmd.py  files_cmd.py  gl_cmd.py  headless_cmd.py  history_cmd.py  init_cmd.py  jira_cmd.py  local_cmd.py  openrouter_auth_cmd.py  openrouter_model_cmd.py  resource_cmd.py  search_cmd.py
tuochat/cli/utils/: cli_suggestions.py
tuochat/context/: artifacts.py  attachments.py  composer.py  ignore_rules.py  recipes.py  validation.py
tuochat/custom_instructions/: INSTRUCTIONS.md  INSTRUCTIONS_gui.md  INSTRUCTIONS_headless.md
tuochat/discovery/: agent_prompts.py  custom_instructions.py  shared.py  skills.py  templates.py
tuochat/gui/: __init__.py  app.py  context_browser.py  dialogs.py  error_log_tab.py  git_tab.py  gitlab_tab.py  jira_tab.py  observability_tab.py  rendering.py  streams.py
tuochat/persistence/: __init__.py  archive.py  store.py
tuochat/provider/: __init__.py  duo.py  eliza.py  oauth.py  openrouter.py  proxy.py  websocket.py
tuochat/sandbox/: __init__.py  api.py  errors.py  integration.py  limits.py  protocol.py  worker.py
tuochat/sandbox/adapters/: __init__.py  base.py  dukpy_adapter.py  lupa_adapter.py  miniracer_adapter.py
tuochat/sandbox/prompts/: javascript.md  lua.md
tuochat/sandbox/serialization/: __init__.py  json_bridge.py  stdout_capture.py
tuochat/security/: __init__.py  credentials.py  masking.py  openrouter_secret.py  startup_audit.py  tamper.py  tamper_manifest.py  windows_isolation.py
tuochat/self_pkg_mgmt/: __init__.py  __main__.py  api.py  audit.py  background.py  cache.py  cli.py  host.py  install_method.py  installed.py  pypi.py  report.py  self_check.py  upgrade.py
tuochat/skills/blind-accessibility/: SKILL.md
tuochat/skills/code-interpreter/: SKILL.md
tuochat/skills/how-to-use-tuochat/: SKILL.md
tuochat/templates/explain/: TEMPLATE.md
tuochat/templates/refactor/: TEMPLATE.md
tuochat/web/: __init__.py  attach.py  fetch.py  render.py
