[project]
name = "tuochat"
version = "0.8.0"
description = "Nonagentic coding client for GitLab(tm) Duo"
readme = "README.md"
authors = [{ name = "Matthew Martin", email = "matthewdeanmartin@gmail.com" }]
keywords = ["gitlab", "duo", "chat", "ai", "semi-agentic"]
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    # security not optional
    "keyring",
    # only installed if we need it for backward compatibility
    "tomli; python_version < '3.11'",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Repository = "https://gitlab.com/matthewdeanmartin/tuochat"
Documentation = "https://tuochat.readthedocs.io/en/latest/"
Changelog = "https://gitlab.com/matthewdeanmartin/tuochat/blob/main/CHANGELOG.md"

homepage = "https://gitlab.com/matthewdeanmartin/tuochat"
issues = "https://gitlab.com/matthewdeanmartin/tuochat/issues/"


[project.optional-dependencies]
gitlab = [
    "python-gitlab>=6.5.0",
]
jira = [
    "jira>=3.10.5; python_version >= '3.10'",
]
openrouter = [
    "openrouter; python_full_version >= '3.9.2'",
]
weak-sandbox = [
    "pywin32; platform_system == 'Windows'",
]
fast = [
    "orjson",
    "rtoml; python_version < '3.14'",
]
antitamper = [
    "bagit",
]
prompt-toolkit = [
    "prompt-toolkit>=3",
]
selfcheck = [
    "pip-audit",
]
all = [
    "python-gitlab>=6.5.0",
    "jira>=3.10.5; python_version >= '3.10'",
    "orjson",
    "rtoml; python_version < '3.14'",
    "bagit",
    "pip-audit",
    "mini-racer",
    "dukpy",
    "lupa",
    "pywin32; platform_system == 'Windows'",
]
js-miniracer = ["mini-racer"]
js-dukpy     = ["dukpy"]
lua          = ["lupa"]
code-interpreters = [
    "mini-racer",
    "dukpy",
    "lupa",
]
web = [
    "html2text>=2020.1.16",
    "readability-lxml>=0.8",
    "trafilatura>=1.6",
]

[dependency-groups]
dev = [
    "keepachangelog-manager>=4.0.0; python_version >= '3.13'",
    # "git2md; python_version >= '3.10'",
    # "pyclean; python_version >= '3.12'",
    # "strip-docs>=1.0; python_version >= '3.12'",
    # "gha-update; python_version >= '3.12'",
    "mkdocstrings[python]",
    "mkdocs; python_version >= '3.12'",
    "ty",
    # mpy
    "mypy",
    "types-pywin32",
    # reports

    # build
    "metametameta>=0.1.3; python_version >= '3.9'",
    "hatchling",
    "ruff>=0.15.8",
    "pylint",
    "bandit",
    "pre-commit",
    # testing tools
    "pytest",
    "pytest-cov",
    "pytest-xdist>=3.5.0",
    "pytest-randomly>=3.15.0",
    "pytest-unused-fixtures; python_version >= '3.10'",
    "hypothesis[cli]",
    # "detect-test-pollution",
    "pytest-timeout>=2.4.0",
    "pytest-benchmark>=4.0.0",
    # docs
    "interrogate>=1.5.0",
    "pydoctest==0.2.1",
    "mdformat>=0.5.0",
    "linkcheckmd>=1.4.0",
    "codespell>=2.2.6",
    "pyenchant>=3.2.2",
]

[tool.uv]
default-groups = "all"

[tool.uv.sources]
tuochat = { workspace = true }

[tool.uv.workspace]
members = ["./",
    # App plugins
]

[project.scripts]
tuochat = "tuochat.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "tuochat/**/*.py",
    "tuochat/skills/**/*.md",
    "tuochat/sandbox/prompts/**/*.md",
    "tuochat/templates/**/*.md",
    "tuochat/schemas/*",
    "tuochat/py.typed",
    "/README.md", "LICENSE",
]

exclude = [

]

[tool.hatch.build.targets.wheel]
packages = ["tuochat"]
include = [
    "tuochat/**/*.py",
    "tuochat/skills/**/*.md",
    "tuochat/sandbox/prompts/**/*.md",
    "tuochat/templates/**/*.md",
    "tuochat/schemas/*",
    "tuochat/py.typed",
    "/README.md", "LICENSE",
]


[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.uv-cache
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.pytest.ini_options]
minversion = "6.0"
# addopts = "-n auto --dist loadfile "
testpaths = [
    "test",
    "tests"
]
junit_family = "xunit1"
norecursedirs = ["vendor", "scripts", ".hypothesis"]
filterwarnings = [
    "ignore::DeprecationWarning:bagit",
]

[tool.isort]
extend_skip = [".uv-cache"]
default_section = "THIRDPARTY"
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = ["tuochat"]
line_length = 120
multi_line_output = 3
use_parentheses = true

[tool.ruff]
line-length = 320
# Assume Python 3.10.
target-version = "py39"

# Enable Pyflakes `E` and `F` codes by default.
[tool.ruff.lint]
select = ["E", "F",
    "D", # docs
    "UP", # pyupgrade
    "B", # bugbear
]
ignore = [
    "D402",
    "D301", # messes with doctests
    "E722",
    # only track structural problems with docstrings, not whitespace, nor missing
    "D200", "D212", "D415", "D411", "D205", "D102", "D103", "D100", "D107", "D101", "D104", "D105",
    "UP007",
    "E402"
]
per-file-ignores = { }

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Exclude a variety of commonly ignored directories.
exclude = [
    "spec",
    "dead_code",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".uv-cache",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]



[tool.ruff.lint.pydocstyle]
convention = "google"



[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    "except ImportError",
    "except ModuleNotFoundError",
    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]




[tool.bug_trail]
app_name = "tuochat"
app_author = "matth"
source_folder = "tuochat"
# ctags_file = "code_tags.tags"

[tool.tuochat]
# Set to true to warn when a job modifies files outside the whitelist.
warn_on_mutation = false

# Parallel execution backend: "process" (default) or "thread".
#   process: full isolation via ProcessPoolExecutor (GIL-free, heavier)
#   thread:  shared memory via ThreadPoolExecutor (lighter, GIL-bound)
parallel_backend = "process"

[tool.tuochat.mutation]
# Glob patterns (relative to project root) that are safe to ignore.
# These are added to the built-in list (.mypy_cache/**, .pytest_cache/**,
# **/__pycache__/**, .tuochat/**, *.pyc, .coverage, etc.).
whitelist = []

[tool.bandit]
exclude_dirs = ["test", "scripts"]
skips = ["B404", "B105", "B606", "B608","B603","B607", "B107", "B110"]
